<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>The robot_description package</description>
  <maintainer email="ham@todo.todo">ham</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>forward_command_controller</depend>
  <depend>pluginlib</depend>

<!--添加控制器-->
  <export>
    <controller_interface plugin="${prefix}/test_controller_plugins.xml"/>
  </export>
</package>
